--- a/estilo.css
+++ b/estilo.css
@@ -7,11 +7,9 @@ body{
     
     background: #0b0a35f0;
     max-width: 800px;
-    margin: 20px;
-    position: absolute;
-
+    margin: 0px;
 }
-
+/** Logo e Navegação**/
 .secao{
     width: 1000px;
     margin: 30px;
@@ -38,21 +36,19 @@ nav{
         
 }
 
+/**Parte 1 - primeira seção**/
 .texto1{
     border:#fbe4bd solid 2px;
     float: left;
     width: 100%;
     height: 300px;
-    position: relative;
     padding: 20%;
     margin: 30px;
-    margin-top: 150px;
+    margin-top: 120px;
     background:#0b0a35f0;
 }
 
-#bg_sec_01 {
-    max-width:100%;
-    border:#fbe4bd solid 2px;
+.imagem_fundo img{
+    max-width: 100%;
     
-
 }
