--- a/estilo.css
+++ b/estilo.css
@@ -11,10 +11,12 @@ body{
 }
 /** Logo e Navegação**/
 .secao{
-    width: 1000px;
+    width: 1119px;
     margin: 30px;
+    margin-top: 0%;
     /**border:#fbe4bd solid;**/
-    position: absolute;
+    position: fixed;
+    background:rgb(18, 17, 55);
 }
 .logo{
     color:#fbe4bd;
@@ -27,28 +29,30 @@ body{
     max-width:50px;
 }
 nav{
+    position: static;
     float: right;
     color:#fbe4bd;
    	text-decoration: none;
     padding: 15px;
     margin-top: 15px;
+    padding-left: 600px;
     word-spacing: 60px;
-        
+    position: fixed;
 }
 
 /**Parte 1 - primeira seção**/
 .texto1{
-    border:#fbe4bd solid 2px;
+   
     float: left;
     width: 100%;
-    height: 300px;
+    height: 400px;
     padding: 20%;
     margin: 30px;
-    margin-top: 120px;
+    margin-top: 0x;
     background:#0b0a35f0;
 }
 
-.imagem_fundo img{
+.texto1 img{
     max-width: 100%;
-    
+    justify-items: center;
 }
