--- a/estilo.css
+++ b/estilo.css
@@ -45,23 +45,33 @@ nav{
    
     float: left;
     width: 100%;
-    height: 400px;
-    padding: 20%;
+    height: 420px;
+    padding: auto;
     margin: 30px;
     margin-top: 0x;
     background:#0b0a35f0;
 }
 
-.texto1 img{
+.texto1 p{
+    background:#0b0a35f0;
     max-width: 100%;
-    justify-items: center;
+    padding:0px;
+    height: 100px;
+
 }
 
+.texto1 img{
+    background:#0b0a35f0;
+    max-width: 60%;
+    padding:10px;
+    height: 400px;
+    float:right;
+
+}
 .texto_p1{
-    float: left;
-    background:#fbe4bd;
-    padding: 100px;
-    margin-top: 2px;
-    display:flex;
-    margin-top: 0%;
+   background:#04040300;
+    padding:100px;
+    padding-top: 50px;
+    color: #fbe4bd;
+     
 }
