--- a/estilo.css
+++ b/estilo.css
@@ -44,8 +44,8 @@ nav{
 .texto1{
    
     float: left;
-    width: 100%;
-    height: 420px;
+    width: 1120px;
+    height: 600px;
     padding: auto;
     margin: 30px;
     margin-top: 0x;
@@ -53,7 +53,7 @@ nav{
 }
 
 .texto1 p{
-    background:#0b0a35f0;
+    
     max-width: 100%;
     padding:0px;
     height: 100px;
@@ -61,17 +61,16 @@ nav{
 }
 
 .texto1 img{
-    background:#0b0a35f0;
-    max-width: 60%;
+    background:#0b0a3500;
     padding:10px;
-    height: 400px;
+    height: 664px;
     float:right;
-
+    
 }
-.texto_p1{
-   background:#04040300;
-    padding:100px;
-    padding-top: 50px;
+.texto_p1{ 
+    position: absolute;
     color: #fbe4bd;
-     
+    top:200px;
+    left: 350px;
+    
 }
